Add titles to all pages

--- a/apps/site/src/_pages/legal/acceptable-use/11_appeals.mdx
+++ b/apps/site/src/_pages/legal/acceptable-use/11_appeals.mdx
@@ -13,6 +13,8 @@ topics:
   - Legal
 ---
 
+# Appeals
+
 ## Appeal and Reinstatement
 
 While the majority of interactions between individuals in the Block Protocol’s community fall within our [Acceptable Use Policies](/legal/acceptable-use) and [Community Guideline](/legal/community), violations of those policies do occur at times. When they do, Block Protocol personnel may need to take enforcement action to address the violations. However, in some cases there may be a basis to reverse a moderation action taken by Block Protocol personnel.
