--- a/apps/site/src/_pages/legal/acceptable-use/2_bullying.mdx
+++ b/apps/site/src/_pages/legal/acceptable-use/2_bullying.mdx
@@ -13,6 +13,8 @@ topics:
   - Legal
 ---
 
+# Bullying and Harassment
+
 We do not tolerate harassment, bullying, or abuse of any kind, whether directly or by encouraging others to take part in the prohibited conduct. This includes:
 
 - Targeted personal attacks
