--- a/apps/site/src/_pages/legal/acceptable-use/3_disruption.mdx
+++ b/apps/site/src/_pages/legal/acceptable-use/3_disruption.mdx
@@ -18,6 +18,8 @@ topics:
   - Legal
 ---
 
+# Disruptive Behavior
+
 Being part of a community includes recognizing how your behavior affects others and engaging in meaningful and productive interactions with people and the platform they rely on.
 
 We do not allow behavior that significantly or continually disrupts the experience of other users. This includes:
