--- a/apps/site/src/_pages/legal/acceptable-use/4_doxxing.mdx
+++ b/apps/site/src/_pages/legal/acceptable-use/4_doxxing.mdx
@@ -13,6 +13,8 @@ topics:
   - Legal
 ---
 
+# Doxxing and Invasion of Privacy
+
 Don't post other people's personal information without their consent. This includes:
 
 - Personal, private email addresses
