--- a/apps/site/src/_pages/legal/acceptable-use/5_discrimination.mdx
+++ b/apps/site/src/_pages/legal/acceptable-use/5_discrimination.mdx
@@ -13,6 +13,8 @@ topics:
   - Legal
 ---
 
+# Hate Speech and Discrimination
+
 The Block Protocol does not tolerate speech that attacks or promotes hate toward an individual or group of people on the basis of who they are, including age, body type, ability, ethnicity, gender identity and expression, level of experience, nationality, personal appearance, race, religion, sexual identity, or sexual orientation. This includes:
 
 - mocking, attacking, or excluding a person or group based on their beliefs or the characteristics listed above;
