--- a/apps/site/src/_pages/legal/acceptable-use/6_impersonation.mdx
+++ b/apps/site/src/_pages/legal/acceptable-use/6_impersonation.mdx
@@ -13,6 +13,8 @@ topics:
   - Legal
 ---
 
+# Impersonation
+
 You may not misrepresent your identity or your association with another person or organization. This includes doing any of the following in a way that misleads or deceives others:
 
 - copying another user's avatar or other personal profile information;
