--- a/apps/site/src/_pages/legal/acceptable-use/8_obscenity.mdx
+++ b/apps/site/src/_pages/legal/acceptable-use/8_obscenity.mdx
@@ -13,6 +13,8 @@ topics:
   - Legal
 ---
 
+# Obscene Content
+
 We do not tolerate content associated with sexual exploitation or abuse of another individual, including where minors are concerned. We do not allow sexually themed or suggestive content that serves little or no purpose other than to solicit an erotic or shocking response, particularly where that content is amplified by its placement in profiles or other social contexts. This includes:
 
 - Pornographic content
