--- a/apps/site/src/_pages/legal/acceptable-use/9_violence.mdx
+++ b/apps/site/src/_pages/legal/acceptable-use/9_violence.mdx
@@ -13,6 +13,8 @@ topics:
   - Legal
 ---
 
+# Violent Content
+
 You may not use the Block Protocol to organize, promote, encourage, threaten, or incite acts of violence. You may not post content that depicts or glorifies violence or physical harm against human beings or animals. This includes:
 
 - threatening another individual or group with abuse, harm, sexual violence, or death;
