--- a/apps/site/src/_pages/legal/community/00_index.mdx
+++ b/apps/site/src/_pages/legal/community/00_index.mdx
@@ -9,6 +9,8 @@ topics:
   - Legal
 ---
 
+# Community Guidelines
+
 Our diverse user base brings together different perspectives, ideas, and experiences - and we are all better off for it. We are committed to making the Block Protocol a welcoming place for the different voices and perspectives our community has to offer, while maintaining a safe environment that enables people to be their best.
 
 By outlining what we think a safe, welcoming, and productive community looks like, we hope to help you understand how best to interact and collaborate on our platform in line with our [Terms of Service](/legal/terms) and [Acceptable Use Policies](/legal/acceptable-use).
