--- a/apps/site/src/_pages/legal/privacy/00_index.mdx
+++ b/apps/site/src/_pages/legal/privacy/00_index.mdx
@@ -11,6 +11,8 @@ topics:
   - Legal
 ---
 
+# Privacy Statement
+
 Effective date: February 21, 2023
 
 Thanks for entrusting _HASH, Inc._ or _HASH, Ltd._ (the “Block Protocol”, “we”, "us" or "our") with your your projects and personal data. This Privacy Statement explains our practices regarding the collection, use, and disclosure of your data, including any personal data we collect and process in connection with our website and any applications, software, products, and services provided by the Block Protocol, including any Beta Previews (collectively, the “Service(s)”).
