--- a/apps/site/src/_pages/legal/privacy/1_private-information-removal.mdx
+++ b/apps/site/src/_pages/legal/privacy/1_private-information-removal.mdx
@@ -11,6 +11,8 @@ topics:
   - Legal
 ---
 
+# Private Information Removal Policy
+
 We offer this private information removal process as an exceptional service only for high-risk content that violates the [Block Protocol Terms of Service](/legal/acceptable-use#3-conduct-restrictions), such as when your security is at risk from exposed access credentials. This guide describes the information the Block Protocol needs from you in order to process a request to remove private information from a project.
 
 ## What is Private Information?
