--- a/apps/site/src/_pages/legal/privacy/2_user-data-legal-requests.mdx
+++ b/apps/site/src/_pages/legal/privacy/2_user-data-legal-requests.mdx
@@ -11,6 +11,8 @@ topics:
   - Legal
 ---
 
+# Legal Requests of User Data
+
 Are you a law enforcement officer conducting an investigation that may involve user content hosted on the Block Protocol? Or maybe you're a privacy-conscious person who would like to know what information we share with law enforcement and under what circumstances. Either way, you're on the right page.
 
 In these guidelines, we provide a little background about what the Block Protocol is, the types of data we have, and the conditions under which we will disclose private user information. Before we get into the details, however, here are a few important details you may want to know:
