--- a/apps/site/src/_pages/legal/terms-corporate/00_index.mdx
+++ b/apps/site/src/_pages/legal/terms-corporate/00_index.mdx
@@ -12,6 +12,8 @@ topics:
   - Legal
 ---
 
+# Corporate Terms of Service
+
 _These terms apply to Block Protocol users who have executed agreements in place referencing the [Corporate Terms of Service](/legal/terms-corporate). All other business or institution customers are directed to the standard [Block Protocol Terms of Service](/legal/terms)._
 
 ## Block Protocol Corporate Terms of Service
