--- a/apps/site/src/_pages/legal/terms/00_index.mdx
+++ b/apps/site/src/_pages/legal/terms/00_index.mdx
@@ -13,6 +13,8 @@ topics:
   - Legal
 ---
 
+# Terms of Service
+
 Thank you for using the Block Protocol (**Þ**). Please read this _Terms of Service_ agreement carefully before accessing or using the Block Protocol. Because it is such an important contract between us and our users, we have tried to make it as clear as possible. For your convenience, we have presented these terms in a short non-binding summary followed by the full legal terms.
 
 ## Summary
