--- a/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
+++ b/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
@@ -12,6 +12,8 @@ topics:
   - Legal
 ---
 
+# Data Protection Agreement
+
 # Introduction
 
 The parties agree that this Block Protocol Data Protection Agreement (“DPA”) sets forth their obligations with respect to the processing and security of Personal Data and, where explicitly stated in the DPA Terms, Customer Data in connection with the Online Services provided by _HASH, Inc._ ("the Block Protocol" and "Block Protocol").
