--- a/apps/site/src/_pages/legal/acceptable-use/7_veracity.mdx
+++ b/apps/site/src/_pages/legal/acceptable-use/7_veracity.mdx
@@ -13,6 +13,8 @@ topics:
   - Legal
 ---
 
+# Misinformation and Disinformation
+
 You may not post content that presents a distorted view of reality, whether it is inaccurate or false (misinformation) or is intentionally deceptive (disinformation), where such content is likely to result in harm to the public or to interfere with fair and equal opportunities for all to take part in a free and open society. This may include:
 
 - inaccurate or scientifically unsupported medical claims that endanger public health or safety;
