--- a/apps/site/src/_pages/legal/0_index.mdx
+++ b/apps/site/src/_pages/legal/0_index.mdx
@@ -9,9 +9,9 @@ topics:
 
 # Legal Policies & Terms
 
-## Quick-links
+### Quick-links
 
-### Using the Block Protocol
+#### Using the Block Protocol
 
 - [Terms of Service](/legal/terms)
 - [Corporate Terms of Service](/legal/terms-corporate)
@@ -30,7 +30,7 @@ topics:
 - [Reporting Abuse or Spam](/legal/acceptable-use/reports)
 - [Appeals Policy](/legal/acceptable-use/appeals)
 
-### Privacy
+#### Privacy
 
 - [Privacy Statement](/legal/privacy)
 - [Data Protection Agreement](/legal/terms/dpa)
@@ -39,7 +39,7 @@ topics:
 - [Private Information Removal Policy](/legal/privacy/private-information-removal)
 - [Guidelines for Legal Requests of Block Protocol User Data](/legal/privacy/user-data-legal-requests)
 
-## Submitting requests
+### Submitting requests
 
 Please serve requests and notices to:
 
