--- a/apps/site/src/_pages/legal/acceptable-use/00_index.mdx
+++ b/apps/site/src/_pages/legal/acceptable-use/00_index.mdx
@@ -17,11 +17,11 @@ topics:
 
 Capitalized terms used but not defined in these Acceptable Use Policies have the meanings assigned to them in our [Terms of Service](/legal/terms), [Corporate Terms of Service](/legal/terms-corporate), and [Privacy Statement](/legal/privacy). For customers subject to the [Corporate Terms of Service](/legal/terms-corporate), "you" and "your" refer to "Customer" or "Users". "We", "us", and "our" refer to "Block Protocol".
 
-## 1. Compliance with Laws and Regulations
+### 1. Compliance with Laws and Regulations
 
 You are responsible for using the Service in compliance with all applicable laws, regulations, and all of our Acceptable Use Policies. These policies may be updated from time to time and are provided below, as well as in our [Terms of Service](/legal/terms) and [Corporate Terms of Service](/legal/terms-corporate).
 
-## 2. User Safety
+### 2. User Safety
 
 We do not allow content or activity on the Block Protocol that:
 
@@ -38,7 +38,7 @@ We do not allow content or activity on the Block Protocol that:
 - exposes users or their devices to [technical exploitation](/legal/acceptable-use/malware) (i.e. malware);
 - is off-topic, or interacts with platform features in a way that significantly or repeatedly [disrupts the experience of other users](/legal/acceptable-use/disruption).
 
-## 3. Intellectual Property, Authenticity, and Private Information
+### 3. Intellectual Property, Authenticity, and Private Information
 
 We do not allow content or activity on the Block Protocol that:
 
@@ -47,7 +47,7 @@ We do not allow content or activity on the Block Protocol that:
 - **impersonates any person or entity**, including any of our employees or representatives, including through false association with the Block Protocol, or by fraudulently misrepresenting your identity or site's purpose; or
 - **violates the privacy of any third party** such as by posting another person's personal information without consent.
 
-## 4. Spam and Inauthentic Activity on the Block Protocol
+### 4. Spam and Inauthentic Activity on the Block Protocol
 
 We do not allow content or activity on the Block Protocol that is:
 
@@ -63,18 +63,18 @@ We do not allow content or activity on the Block Protocol that is:
 - **using our servers for any form of excessive automated bulk activity**, to place undue burden on our servers through automated means, or to relay any form of unsolicited advertising or solicitation through our servers, such as get-rich-quick schemes; or
 - **incentivized by (or incentivizes inauthentic engagement with) rewards** such as cryptocurrency airdrops, tokens, credits, gifts or other give-aways.
 
-## 5. Site Access and Safety
+### 5. Site Access and Safety
 
 We do not allow content or activity on the Block Protocol that:
 
 - **directly supports unlawful active attack or malware campaigns that are causing technical harms** — such as using our platform to deliver malicious executables or as attack infrastructure, for example by organizing denial of service attacks or managing command and control servers — with no implicit or explicit dual-use purpose prior to the abuse occurring; or
 - **uses our servers to disrupt or to attempt to disrupt, or to gain or to attempt to gain unauthorized access to, any service, device, data, account or network.** Please note, activities permitted under bug bounty programs, such as the [Block Protocol Bug Bounty program](/security), are not considered “unauthorized,” but must only affect the organization whose bug bounty program authorized the activity.
 
-## 6. Services Usage Limits
+### 6. Services Usage Limits
 
 You will not reproduce, duplicate, copy, sell, resell or exploit any portion of the Service, use of the Service, or access to the Service without our express written permission.
 
-## 7. Information Usage Restrictions
+### 7. Information Usage Restrictions
 
 You may use information from our Service for the following reasons, regardless of whether the information was scraped, collected through our API, or obtained otherwise:
 
@@ -87,17 +87,17 @@ You may not use information from the Service (whether scraped, collected through
 
 Your use of information from the Service must comply with the [Block Protocol Privacy Statement](/legal/privacy).
 
-## 8. Privacy
+### 8. Privacy
 
 Misuse of personal information is prohibited.
 
 Any person, entity, or service collecting data from the Service must comply with the [Block Protocol Privacy Statement](/legal/privacy), particularly in regards to the collection of personal information. If you collect any personal information from the Service, you agree that you will only use that personal information for the purpose for which that User has authorized it. You agree that you will reasonably secure any personal information you have gathered from the Service, and you will respond promptly to complaints, removal requests, and "do not contact" requests from us or other users.
 
-## 9. Excessive Bandwidth Use
+### 9. Excessive Bandwidth Use
 
 The Service's bandwidth limitations vary based on the features you use. If we determine your bandwidth usage to be significantly excessive in relation to other users of similar features, we reserve the right to suspend your Account, throttle your file hosting, or otherwise limit your activity until you can reduce your bandwidth consumption. We also reserve the right—after providing advance notice—to delete repositories that we determine to be placing undue strain on our infrastructure. For more details on specific features' bandwidth limitations, see the [Block Protocol Additional Product Terms](/legal/terms/products).
 
-## 10. Advertising on the Block Protocol
+### 10. Advertising on the Block Protocol
 
 **Short version:** _We do not generally prohibit use of the Block Protocol for advertising. However, we expect our users to follow certain limitations, so the Block Protocol does not become a spam haven. No one wants that._
 
@@ -107,7 +107,7 @@ You may not promote or distribute content or activity that is illegal or otherwi
 
 If you decide to post any promotional materials in your Account, you are solely responsible for complying with all applicable laws and regulations, including without limitation the U.S. Federal Trade Commission's Guidelines on Endorsements and Testimonials. We reserve the right to remove any promotional materials or advertisements that, in our sole discretion, violate any Block Protocol terms or policies.
 
-## 11. User Protection
+### 11. User Protection
 
 You must not engage in activity that significantly harms other users.
 
