--- a/apps/site/src/_pages/legal/acceptable-use/10_reports.mdx
+++ b/apps/site/src/_pages/legal/acceptable-use/10_reports.mdx
@@ -18,9 +18,9 @@ topics:
 
 # Reporting Abuse or Spam
 
-## Reporting Abuse
+### Reporting Abuse
 
-## About reporting abuse or spam
+### About reporting abuse or spam
 
 The Block Protocol provides a baseline code of conduct for everyone who uses its services. For more information, see our [Terms of Service](/legal/terms) and [Community Guidelines](/legal/community).
 
@@ -30,18 +30,18 @@ Certain types of content may also be reported directly to the project's maintain
 
 Users in India can contact the Block Protocol's Grievance Officer for India using our [support form](/contact).
 
-## Reporting an account
+### Reporting an account
 
 Contact us using the [support form](/contact), including a link to the user or organization's account profile page, and a complete report about the user's behavior.
 
-## Reporting a comment or discussion thread
+### Reporting a comment or discussion thread
 
 Contact us using the [support form](/contact), including a link to the offending user-posted comment or discussion thread, and a complete explanation of why you think it breaks any of our terms or policies.
 
-## Reporting a block, type or service listing in the Block Protocol Hub
+### Reporting a block, type or service listing in the Block Protocol Hub
 
 Contact us using the [support form](/contact), including a link to the Block Protocol Hub listing page and a complete explanation of what policy a listing contravenes.
 
-## Any other report
+### Any other report
 
 Contact us using the [support form](/contact), including as much information as you can.
