--- a/apps/site/src/_pages/legal/privacy/3_cookies.mdx
+++ b/apps/site/src/_pages/legal/privacy/3_cookies.mdx
@@ -17,11 +17,11 @@ The Block Protocol provides a great deal of transparency regarding how we use yo
 
 Since the number and names of cookies may change, the table below may be updated from time to time.
 
-## Cookie details
+### Cookie details
 
 {`Cookie table`}
 
-## Manage your cookie preferences
+### Manage your cookie preferences
 
 You can change your preference about non-essential cookies at any time on this page.
 
