--- a/apps/site/src/_pages/legal/terms/1_product.mdx
+++ b/apps/site/src/_pages/legal/terms/1_product.mdx
@@ -25,17 +25,17 @@ By using the Additional Products and Features, you also agree to the applicable 
 - **Block Protocol Pro** users may also have access to the following Additional Products and Features: Private Projects
 - **Block Protocol Enterprise** users may also have access to the following Additional Products and Features: Block Intelligence, and Private Projects.
 
-## Additional Products and Features
+### Additional Products and Features
 
-### Block Intelligence
+#### Block Intelligence
 
 _More information will be available about the **Block Intelligence** product soon._
 
-### Block Protocol Hub
+#### Block Protocol Hub
 
 The Block Protocol Hub ([Þ Hub](https://blockprotocol.org/hub)) is a Block, Service and Type hosting service that allows you to host packages privately or publicly and use packages in your projects. The Þ Hub is free to use but customers are billed if they want to access certain explicitly marked paid functionality, such as premium External Services (beyond any entitlements Customers may have, or which may be generally available).
 
-### External Services
+#### External Services
 
 External Services provide access to free and paid APIs and endpoints from the Block Protocol and a range of third-parties directly via the Service. These enable you to both create and experience rich, high-quality, interactive blocks. Access to External Services is billed on a usage basis. Included allowances and entitlements to External Service access are outlined on the [blockprotocol.org/pricing](https://blockprotocol.org/pricing) page. Overage Charges are accrued by Customers in arrears based on actual usage of External Services above the included entitlements in a Customer's Subscription License Term or other commercial Agreement with the Block Protocol. Your use of an External Service must comply with both the [Block Protocol Community Guidelines](/legal/community) and [Block Protocol Acceptable Use Policy](/legal/acceptable-use), as well as any terms laid forth by the External Service itself. These include:
 
@@ -57,28 +57,28 @@ If you have questions about whether your use or intended use falls into these ca
 
 In order to prevent violations of these limitations and abuse of External Services, the Block Protocol may monitor your use of External Services. Misuse of External Services may result in restrictions in your ability to use one, several or all External Services, or in some cases, suspension or termination of your Block Protocol account.
 
-### Private Projects
+#### Private Projects
 
 _More information will be available soon._
 
 If you use certain functionality, products, services and features (such as External Services) within a project (including Blocks, Flows, Graphs, Pages, Repositories and Types), you authorize the Block Protocol to scan those project(s), including the contents of Private Projects, for the purpose of providing the functionality, product, service or feature.
 
-## Overarching Terms
+### Overarching Terms
 
 The following may apply to any Customer or User of the Block Protocol.
 
-### Competitive Benchmarking
+#### Competitive Benchmarking
 
 If you offer a product or service competitive to any Block Protocol product or service, by using that Block Protocol product or service, you agree to and hereby waive any restrictions as to the Block Protocol on competitive use and benchmark testing in the terms governing your competitive product or service. If you do not intend to waive such restrictions in your terms of use, you are not allowed to use that Block Protocol product or service.
 
-### Telemetry
+#### Telemetry
 
 Block Protocol products and services may, depending on your preferred telemetry settings, collect environmental and usage information. This may include personal data, as referenced in the [Block Protocol Privacy Statement](/legal/privacy).
 
-### Previews
+#### Previews
 
 Previews means software, online services and additional products and features provided for preview, evaluation, demonstration or trial purposes, or pre-release versions of those, such as alpha, beta, or early access. If your Agreement does not include terms and conditions that address Previews, then the following terms apply. The Block Protocol grants a limited right to use a non-production instance of the Preview. Previews are provided “AS-IS”, “WITH ALL FAULTS” and “AS AVAILABLE”. The Block Protocol may change or discontinue Previews at any time without notice. Any information we give you about a private Preview will be considered the Block Protocol's confidential information. If you choose to provide comments or suggestions about a Preview, we may use that feedback for any purpose without obligation of any kind. The Block Protocol's maximum liability is limited to direct damages up to US $5,000. The Block Protocol has no obligation to defend, indemnify, or hold you harmless for claims brought by third parties arising from your use of Previews.
 
-### Availability
+#### Availability
 
 The Block Protocol reserves the right at all times to reclaim any Block Protocol subdomain or website path without liability.
