Fix terms anchors

--- a/apps/site/src/_pages/legal/terms/00_index.mdx
+++ b/apps/site/src/_pages/legal/terms/00_index.mdx
@@ -19,26 +19,26 @@ Thank you for using the Block Protocol (**Þ**). Please read this _Terms of Serv
 
 ### Summary
 
-| Section                                                                        | What can you find there?                                                                                                                                                                                               |
-| ------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [A. Definitions](#a-definitions)                                               | Some basic terms, defined in a way that will help you understand this agreement. Refer back up to this section for clarification.                                                                                      |
-| [B. Account Terms](#b-account-terms)                                           | These are the basic requirements of having an Account with the Block Protocol.                                                                                                                                         |
-| [C. Acceptable Use](#c-acceptable-use)                                         | These are the basic rules you must follow when using your Block Protocol Account.                                                                                                                                      |
-| [D. User-Generated Content](#d-user-generated-content)                         | You own the content you post on the Block Protocol site. However, you have some responsibilities regarding it, and we ask you to grant us some rights so we can provide services to you.                               |
-| [E. Private Projects](#e-private-projects)                                     | This section talks about how the Block Protocol organization will treat content you post in private projects.                                                                                                          |
-| [F. Copyright & DMCA Policy](#f-copyright-infringement-and-dmca-policy)        | This section talks about how the Block Protocol organization will respond if you believe someone is infringing your copyrights on the Block Protocol service.                                                          |
-| [G. Intellectual Property Notice](#g-intellectual-property-notice)             | This describes the Block Protocol organization's rights in the website and service.                                                                                                                                    |
-| [H. API Terms](#h-api-terms)                                                   | These are the rules for using the Block Protocol's APIs, whether you are using the API for development or data collection.                                                                                             |
-| [I. Additional Product Terms](#i-block-protocol-additional-product-terms)      | We have a few specific rules for the Block Protocol's features and products.                                                                                                                                           |
-| [J. Beta Previews](#j-beta-previews)                                           | These are some of the additional terms that apply to Block Protocol features and services that are still in development.                                                                                               |
-| [K. Payment](#k-payment)                                                       | You are responsible for payment. We are responsible for billing you accurately.                                                                                                                                        |
-| [L. Cancellation and Termination](#l-cancellation-and-termination)             | You may cancel this agreement and close your Account at any time.                                                                                                                                                      |
-| [M. Communications with Block Protocol](#m-communications-with-block-protocol) | We only use email and other electronic means to stay in touch with our users. We do not provide phone support.                                                                                                         |
-| [N. Disclaimer of Warranties](#n-disclaimer-of-warranties)                     | We provide our service as is, and we make no promises or guarantees about this service. **Please read this section carefully; you should understand what to expect.**                                                  |
-| [O. Limitation of Liability](#o-limitation-of-liability)                       | We will not be liable for damages or losses arising from your use or inability to use the service or otherwise arising under this agreement. **Please read this section carefully; it limits our obligations to you.** |
-| [P. Release and Indemnification](#p-release-and-indemnification)               | You are fully responsible for your use of the service.                                                                                                                                                                 |
-| [Q. Changes to these Terms of Service](#q-changes-to-these-terms)              | We may modify this agreement, but we will give you 30 days' notice of material changes.                                                                                                                                |
-| [R. Miscellaneous](#r-miscellaneous)                                           | Please see this section for legal details including our choice of law.                                                                                                                                                 |
+| Section                                                                         | What can you find there?                                                                                                                                                                                               |
+| ------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [A. Definitions](#a.-definitions)                                               | Some basic terms, defined in a way that will help you understand this agreement. Refer back up to this section for clarification.                                                                                      |
+| [B. Account Terms](#b.-account-terms)                                           | These are the basic requirements of having an Account with the Block Protocol.                                                                                                                                         |
+| [C. Acceptable Use](#c.-acceptable-use)                                         | These are the basic rules you must follow when using your Block Protocol Account.                                                                                                                                      |
+| [D. User-Generated Content](#d.-user-generated-content)                         | You own the content you post on the Block Protocol site. However, you have some responsibilities regarding it, and we ask you to grant us some rights so we can provide services to you.                               |
+| [E. Private Projects](#e.-private-projects)                                     | This section talks about how the Block Protocol organization will treat content you post in private projects.                                                                                                          |
+| [F. Copyright & DMCA Policy](#f.-copyright-infringement-and-dmca-policy)        | This section talks about how the Block Protocol organization will respond if you believe someone is infringing your copyrights on the Block Protocol service.                                                          |
+| [G. Intellectual Property Notice](#g.-intellectual-property-notice)             | This describes the Block Protocol organization's rights in the website and service.                                                                                                                                    |
+| [H. API Terms](#h.-api-terms)                                                   | These are the rules for using the Block Protocol's APIs, whether you are using the API for development or data collection.                                                                                             |
+| [I. Additional Product Terms](#i.-block-protocol-additional-product-terms)      | We have a few specific rules for the Block Protocol's features and products.                                                                                                                                           |
+| [J. Beta Previews](#j.-beta-previews)                                           | These are some of the additional terms that apply to Block Protocol features and services that are still in development.                                                                                               |
+| [K. Payment](#k.-payment)                                                       | You are responsible for payment. We are responsible for billing you accurately.                                                                                                                                        |
+| [L. Cancellation and Termination](#l.-cancellation-and-termination)             | You may cancel this agreement and close your Account at any time.                                                                                                                                                      |
+| [M. Communications with Block Protocol](#m.-communications-with-block-protocol) | We only use email and other electronic means to stay in touch with our users. We do not provide phone support.                                                                                                         |
+| [N. Disclaimer of Warranties](#n.-disclaimer-of-warranties)                     | We provide our service as is, and we make no promises or guarantees about this service. **Please read this section carefully; you should understand what to expect.**                                                  |
+| [O. Limitation of Liability](#o.-limitation-of-liability)                       | We will not be liable for damages or losses arising from your use or inability to use the service or otherwise arising under this agreement. **Please read this section carefully; it limits our obligations to you.** |
+| [P. Release and Indemnification](#p.-release-and-indemnification)               | You are fully responsible for your use of the service.                                                                                                                                                                 |
+| [Q. Changes to these Terms of Service](#q.-changes-to-these-terms)              | We may modify this agreement, but we will give you 30 days' notice of material changes.                                                                                                                                |
+| [R. Miscellaneous](#r.-miscellaneous)                                           | Please see this section for legal details including our choice of law.                                                                                                                                                 |
 
 ### The Block Protocol Terms of Service
 
